# ray-tracer

./: .gitignore  CMakeLists.txt  README.md  ray_tracer.json
includes/: types.hh
includes/primitives/: color.hh
scenes/: anaglyph.json  billboards.json  billboards_anaglyph.json  blobs.json  cubes.json  default.json  refraction.json  skybox.json  spotlight.json
scenes/submission/: minecraft.json  skybox.json  spotlight.json  star_wars.json  textures.json
src/: CMakeLists.txt  engine.cc  engine.hh  main.cc  options.hh  types.hh
src/core/: engine.cc  engine.hh  options.hh
src/primitives/: color.cc  color.hh  point.cc  point.hh  vector.cc  vector.hh
src/scene/: blob.cc  blob.hh  bump_mapping_texture.cc  bump_mapping_texture.hh  camera.cc  camera.hh  cube.cc  cube.hh  directional_light.cc  directional_light.hh  image_texture.cc  image_texture.hh  light.hh  marching_cubes.hh  object.cc  object.hh  perlin_texture.cc  perlin_texture.hh  plane.cc  plane.hh  point_light.cc  point_light.hh  procedural_texture.cc  procedural_texture.hh  rectangle.cc  rectangle.hh  scene.cc  scene.hh  sphere.cc  sphere.hh  spot_light.cc  spot_light.hh  texture_material.hh  transparent_texture.cc  transparent_texture.hh  triangle.cc  triangle.hh  uniform_texture.cc  uniform_texture.hh
src/scene/objects/: billboard.cc  billboard.hh  cube.cc  cube.hh  cube_aligned.cc  cube_aligned.hh  cuboid_aligned.cc  cuboid_aligned.hh  englobing_object.cc  englobing_object.hh  object.cc  object.hh  plane.cc  plane.hh  rectangle.cc  skybox.cc  skybox.hh  sphere.cc  sphere.hh  triangle.cc
src/scene/textures/: bump_mapping_texture.cc  bump_mapping_texture.hh  image_texture.cc  image_texture.hh  perlin_texture.cc  perlin_texture.hh  procedural_texture.cc  procedural_texture.hh  texture_material.hh  transparent_texture.cc  transparent_texture.hh  uniform_texture.hh
src/utils/: image.cc  image.hh  image_png.hh  image_ppm.hh  parser.cc  parser.hh  perlin_noise.cc  perlin_noise.hh  transformation_matrix.cc  transformation_matrix.hh  types.hh
textures/: billboard.ppm  dice.ppm  numbers.ppm  water_8.ppm
